# specsavers-free-appointment-checker

./: .env.example  .gitignore  Cargo.toml  README.md  specsavers-checker.service  specsavers-checker.timer
src/: main.rs
